# finstream-co

./: .gitignore  Cargo.toml  GEMINI.md  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: release.yml
_scripts/: scaffold_finstream_copilot.ps1
assman/: Cargo.toml
assman/src/: lib.rs
climan/: Cargo.toml
climan/src/: lib.rs
config/: config.yaml
confman/: Cargo.toml
confman/src/: lib.rs
db/: Cargo.toml
db/src/: lib.rs
finstream/: Cargo.toml
finstream/src/: main.rs
ingestors/: example_ingestor  example_ingestor.ps1
logger/: Cargo.toml
logger/src/: lib.rs  reload.rs
marketstatus/: Cargo.toml
marketstatus/src/: lib.rs
primon/: Cargo.toml
primon/src/: lib.rs
servman/: Cargo.toml
servman/src/: lib.rs
sysbus/: Cargo.toml
sysbus/src/: lib.rs
telemetry/: Cargo.toml
telemetry/src/: lib.rs
