[workspace]
members = [
    "finstream",
    "sysbus",
    "logger",
    "confman",
    "db",
    "servman",
    "climan",
    "assman",
    "telemetry",
    "marketstatus",
    "primon"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
rust_decimal = "1"
bytes = "1"
redb = "2"
arc-swap = "1"
notify = "6"
