[package]
name = "finstream"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rust_decimal.workspace = true
bytes.workspace = true
redb.workspace = true
arc-swap.workspace = true
notify.workspace = true
sysbus = { path = "../sysbus" }
logger = { path = "../logger" }
confman = { path = "../confman" }
db = { path = "../db" }
servman = { path = "../servman" }
climan = { path = "../climan" }
assman = { path = "../assman" }
telemetry = { path = "../telemetry" }
marketstatus = { path = "../marketstatus" }
primon = { path = "../primon" }
